# cv-seminar-deployment-showcase

./: .gitignore  README.md
cv-sem-demo-thick/: package.json
cv-sem-demo-thick/src/: App.css  App.js
cv-sem-demo-thick/src/components/: image-classifier.js  image-viewer.js  upload.js
cv-sem-demo-thin/: package.json
cv-sem-demo-thin/backend/: ml_backend.py  pyproject.toml  serve_model.py
cv-sem-demo-thin/src/: App.css  App.js
cv-sem-demo-thin/src/api/: api.js
cv-sem-demo-thin/src/components/: image-classifier.js  image-viewer.js
