[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mx-e", email = "mail@mx-e.net"},
]
dependencies = [
    "fastapi>=0.73.0",
    "uvicorn>=0.17.4",
    "python-multipart>=0.0.5",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
